# qmlcreator

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  clickable.json  clickable.yaml  manifest.json.in  qmlcreator.apparmor  qmlcreator.desktop  qmlcreator.pro  qmlcreator_resources.qrc  run.sh
.github/workflows/: android.yml  ios.yml  main.yml
android/: AndroidManifest.xml
android/res/drawable/: splashscreen.xml  splashscreen_land.xml  splashscreen_port.xml
cpp/: ProjectManager.cpp  ProjectManager.h  QMLHighlighter.cpp  ScreenInsets.cpp  ScreenInsets.h  main.cpp  modulesfinder.cpp  modulesfinder.h  screeninsets.cpp  screeninsets.h  windowloader.cpp  windowloader.h
examples/Accelerometer/: main.qml
examples/Ambient Light Sensor/: main.qml
examples/Analog Clock/: ClockBackground.qml  ClockHand.qml  main.qml
examples/Camera/: main.qml
examples/Controls/: main.qml
examples/Debugging/: Rect.qml  main.qml
examples/Device Info/: main.qml
examples/Dialogs/: ColorDialogTab.qml  main.qml
examples/Gradient Text/: main.qml
examples/Graphical Effects/: BrightnessContrastTab.qml  DirectionalBlurTab.qml
examples/Joystick/: Player.qml  main.qml
examples/Live Webcam/: main.qml
examples/Local Storage/: main.qml
examples/Looped List View/: DateSelector.qml  NumberSelector.qml  main.qml
examples/Map/: main.qml
examples/Multi-touch/: main.qml
examples/Particles/: main.qml
examples/Repeater/: ColorRect.qml  main.qml
examples/Settings/: main.qml
examples/Shader Effect/: main.qml
examples/Styles/: SBusyIndicatorStyle.qml  main.qml
examples/Swipe View/: SwipeScreen.qml
examples/Timer/: main.qml
examples/Transform/: main.qml
examples/WebSocket/: main.qml
examples/XMLHttpRequest/: main.qml
ios/: Info.plist
ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
platform-specific/android/: AndroidManifest.xml
platform-specific/ios/: Info.plist  Project-Info.plist
platform-specific/ubuntu-touch/: manifest.json.in  qmlcreator.apparmor
qml/: main.qml
qml/components/: CApplicationWindow.qml  CBackButton.qml  CCheckBox.qml  CCodeArea.qml  CContextMenuButton.qml  CEditorScrollBar.qml  CFileButton.qml  CHorizontalSeparator.qml  CIcon.qml  CInformationItem.qml  CLabel.qml  CListView.qml  CNavigationButton.qml  CNavigationScrollBar.qml  CScrollBar.qml  CSettingButton.qml  CSlider.qml  CSplitView.qml  CSwitcher.qml  CTextArea.qml  CTextField.qml  CToolBar.qml  CToolBarBlur.qml  CToolButton.qml  CTooltip.qml  CVerticalSeparator.qml
qml/components/dialogs/: BaseDialog.qml  ConfirmationDialog.qml  DialogLoader.qml  FontFamilyDialog.qml  FontSizeDialog.qml  IndentSizeDialog.qml  ListDialog.qml  MessageDialog.qml  NewDirDialog.qml  NewFileDialog.qml  NewProjectDialog.qml
qml/components/palettes/: BasePalette.qml  LightPalette.qml
qml/examples/3D/: main.qml
qml/examples/Camera/: main.qml
qml/examples/Controls/: main.qml
qml/examples/Device Info/: main.qml
qml/examples/Dialogs/: MessageDialogTab.qml
qml/examples/Graphical Effects/: BrightnessContrastTab.qml  DesaturateTab.qml  DirectionalBlurTab.qml  main.qml
qml/examples/Live Webcam/: main.qml
qml/examples/Map/: main.qml
qml/examples/Swipe View/: LogInScreen.qml  RegisterScreen.qml  (+1 more)
qml/modules/: 3D.qml  3DInput.qml  3DRenderer.qml  AudioEngine.qml  Bluetooth.qml  Canvas3D.qml  Controls.qml  Dialogs.qml  Extras.qml  GraphicalEffects.qml  Layouts.qml  LocalStorage.qml  Location.qml  Models.qml  Multimedia.qml  Nfc.qml  Particles.qml  Positioning.qml  Qml.qml  Quick.qml  Scene3D.qml  Sensors.qml  Settings.qml  Styles.qml  Test.qml  WebSockets.qml  WebView.qml  Window.qml  XmlListModel.qml
qml/screens/: AboutScreen.qml  BlankScreen.qml  EditorScreen.qml  ExamplesScreen.qml  FilesScreen.qml  MainMenuScreen.qml  ModulesScreen.qml  NewPlaygroundScreen.qml  PlaygroundScreen.qml  ProjectsScreen.qml  SettingsScreen.qml
resources/translations/: qmlcreator_fr.ts
snap/: snapcraft.yaml
snap/gui/: qmlcreator.desktop
src/: CMakeLists.txt  EditorBackend.cpp  EditorBackend.h  MessageHandler.cpp  MessageHandler.h  ProjectManager.cpp  ProjectManager.h  ScreenInsets.cpp  ScreenInsets.h  SyntaxHighlighter.h  linenumbershelper.h  main.cpp  modulesfinder.cpp  modulesfinder.h  windowloader.cpp  windowloader.h
src/examples/3D/: main.qml
src/examples/Analog Clock/: Clock.qml  ClockDigits.qml
src/examples/Canvas/: main.qml
src/examples/Dialogs/: MessageDialogTab.qml  main.qml
src/examples/Graphical Effects/: BrightnessContrastTab.qml  DesaturateTab.qml  DirectionalBlurTab.qml  main.qml
src/examples/Joystick/: Joystick.qml
src/examples/Live Webcam/: WebcamsModel.qml
src/examples/Looped List View/: LoopedListView.qml  LoopedListViewDelegate.qml
src/examples/Multi-touch/: TouchItem.qml
src/examples/Particles/: main.qml
src/examples/Proximity Sensor/: main.qml
src/examples/Shader Effect/: main.qml
src/examples/Styles/: SButtonStyle.qml
src/examples/Swipe View/: LogInScreen.qml  RegisterScreen.qml  RestorePasswordScreen.qml  SwipeView.qml  main.qml
src/examples/Timer/: main.qml
src/examples/Torch/: main.qml
src/examples/Transform/: main.qml
src/qml/: Main.qml  error.qml  main.qml  modules.qml
src/qml/components/: CApplicationWindow.qml  CBackButton.qml  CCodeArea.qml  CDialogButton.qml  CFlickable.qml  CIcon.qml  CLabel.qml  CListView.qml  CNavigationButton.qml  CScrollBar.qml  CSlider.qml  CSwitcher.qml  CTextArea.qml  CToolBar.qml  CToolButton.qml
src/qml/components/dialogs/: BaseDialog.qml  ConfirmationDialog.qml  DialogLoader.qml  FontFamilyDialog.qml  FontSizeDialog.qml  ListDialog.qml  MessageDialog.qml  NewDirDialog.qml  NewFileDialog.qml  NewProjectDialog.qml
src/qml/components/palettes/: BasePalette.qml  CutePalette.qml  DarkPalette.qml  LightPalette.qml  PaletteLoader.qml
src/qml/screens/: AboutScreen.qml  BlankScreen.qml  EditorScreen.qml  FilesScreen.qml  ModulesScreen.qml  NewPlaygroundScreen.qml  PlaygroundScreen.qml  SettingsScreen.qml
src/resources/templates/: MainFile.qml
ubuntu-touch/: manifest.json.in  qmlcreator.desktop
(+2 files in other folders)
